@@ -4,7 +4,7 @@ import java.awt.Graphics2D;
 import java.awt.Point;
 import java.awt.Rectangle;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 import jopa.nodes.JOPAInputNode;
 import jopa.nodes.JOPANode;
@@ -20,12 +20,14 @@ public class JOPAFunction {
 
 	public JOPAFunction(String name) {
 		this.name = name;
-		this.inputs = new ArrayList<JOPANode>(List.of(new JOPAInputNode(new Rectangle(50, 50, 100, 100), "INPUT_0")));
-		this.statements = new ArrayList<JOPANode>(List.of(new JOPANode(new Rectangle(350, 50, 100, 100), "STATEMENT_0"),
-				new JOPANode(new Rectangle(350, 200, 100, 100), "STATEMENT_1"),
-				new JOPANode(new Rectangle(350, 350, 100, 100), "STATEMENT_2")));
+		this.inputs = new ArrayList<JOPANode>(
+				Arrays.asList(new JOPAInputNode(new Rectangle(50, 50, 100, 100), "INPUT_0")));
+		this.statements = new ArrayList<JOPANode>(
+				Arrays.asList(new JOPANode(new Rectangle(350, 50, 100, 100), "STATEMENT_0"),
+						new JOPANode(new Rectangle(350, 200, 100, 100), "STATEMENT_1"),
+						new JOPANode(new Rectangle(350, 350, 100, 100), "STATEMENT_2")));
 		this.outputs = new ArrayList<JOPANode>(
-				List.of(new JOPAOutputNode(new Rectangle(650, 50, 100, 100), "OUTPUT_0")));
+				Arrays.asList(new JOPAOutputNode(new Rectangle(650, 50, 100, 100), "OUTPUT_0")));
 	}
 
 	public void draw(Graphics2D g, JOPANode selectedNode, JOPAPort selectedPort) {
@@ -79,7 +81,7 @@ public class JOPAFunction {
 
 	public boolean verifyNodes() {
 		if (outputs != null) {
-			for (var node : outputs) {
+			for (JOPANode node : outputs) {
 				if (!node.inputsConnected()) {
 					System.out.println("function " + name + " nodes not OK");
 
